@@ -1,3 +1,10 @@
+2006-10-18  Jeroen Dekkers  <jeroen@dekkers.cx>
+
+	* disk/lvm.c: Rename VGS to VG_LIST.
+	(grub_lvm_iterate): Change VGS->LV to VG-LV.
+	(grub_lvm_open): Likewise.
+	Thanks to Michael Guntsche for finding this bug.
+
 2006-10-15  Yoshinori K. Okuji  <okuji@enbug.org>
 
 	* configure.ac (AC_INIT): Bumped to 1.95.
